# Agentic-RAG

./: README.md  agentic_rag.ipynb  pyproject.toml  requirements.txt
