[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "huggingface>=0.0.1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.0",
    "langgraph-cli[inmem]>=0.3.6",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
]
